<resources>
    <string name="app_name" translatable="false">Kidmobi</string>
    <string name="mobicon_logo_desc" translatable="false">Kidmobi logo</string>
    <string name="login_welcome_message">Hoşgeldiniz. Mobil cihazlarınızı yönetmek için giriş yapınız.</string>
    <string name="facebook_login_btn_msg">FACEBOOK İLE GİRİŞ</string>
    <string name="google_login_btn_msg">GOOGLE İLE GİRİŞ</string>
    <string name="login_login_as_guest_btn_str">MİSAFİR OLARAK GİRİŞ</string>

    <string name="facebook_app_id" translatable="false">743880013182917</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb743880013182917</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="qrcode_image_string" translatable="false">Qrcode Image</string>
    <string name="login_google_basarisiz_giris">Google ile giriş yapamadınız.</string>
    <string name="login_kullanici_bilgileri_alinamadi">Kullanıcı bilgileri alınamadı. Lütfen tekrar giriş yapmayı deneyin.</string>
    <string name="splash_internet_baglantisi_hatasi">Lütfen internet bağlantınızı kontrol ediniz.</string>
    <string name="qr_code_aciklama">Aşağıdaki karekodu okuyan cihaz sizin mobil cihazınızı yönetebilir.</string>
    <string name="logOut">Çıkış</string>
    <string name="btnDelete">Sil</string>
    <string name="login_baskasi_tarafindan_yönetilmek_icin_msg">Ya da  başkası tarafından yönetilmek için</string>
    <string name="add_new_device">Yeni cihaz ekle</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="ekran_parlakligi">Ekran Parlaklığını Ayarla</string>
    <string name="ses_duzeyini_ayarla">Ses Düzeyini Ayarla</string>
    <string name="cihaz_ekleniyor">Cihaz ağınızına ekleniyor.</string>

    <string name="qr_couldnt_read">Qr kod okunamadı. Lütfen tekrar deneyiniz.</string>
    <string name="save">Kaydet</string>
    <string name="no_mobile_device">Henüz mobil cihaz eklemediniz.</string>
    <string name="no_mobile_device_message">Henüz mobil cihaz eklemediniz.</string>

    <string name="no">Hayır</string>
    <string name="yes">Evet</string>
    <string name="are_you_sure_to_delete">Bu cihazı silmek istediğinize emin misiniz?</string>
    <string name="permission_of_changing_system_settings">Sistem ayarlarını değiştirme izni</string>
    <string name="permission_of_system_setting_msg">Hedef cihazın ses, ekran parlaklığı gibi ayarlarınız değiştirmek için izin istiyoruz.</string>
    <string name="no_permission_msg">İzin vermediğiniz için uygulama kapatılacaktır.</string>
    <string name="form_required">* Gerekli</string>
    <string name="dashboard_tab1_txt">MOBİL CİHAZLARIM</string>
    <string name="dashboard_tab2_txt">CİHAZ KİMLİĞİM</string>
    <string name="login_auth_failed">Doğrulama başarısız.</string>

    <string name="whose_device">Bu cihaz kime ait?</string>
    <string name="device_owner_hint">Aslının telefonu</string>
    <string name="form_field_not_null">Bu alan boş olamaz.</string>
    <string name="about_us">Hakkında</string>
    <string name="kidmobi_is_running">Kidmobi çalışıyor</string>
    <string name="frg_show_dev_id_header">Cihaz Kimliği</string>
    <string name="session_start_on_target_device">Hedef Cihazda Oturum Açın</string>
    <string name="half_hour">30 dakika</string>
    <string name="one_hour">Bir saat</string>
    <string name="two_hours">İki saat</string>
    <string name="four_hours">Dört saat</string>
    <string name="cancel">İPTAL</string>
    <string name="determine_session_time">Oturum süresini belirleyin</string>
    <string name="device_owner_placeholder">Zehra\'nın cep telefonu</string>
    <string name="click_to_go_details">Click to go details</string>
    <string name="device_brand">iPhone 11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="device_man_tab_general">Genel</string>
    <string name="device_man_tab_web">Web</string>
    <string name="device_man_tab_running_apps">ÇALIŞAN UYGULAMALAR</string>
    <string name="device_man_tab_apps">YÜKLÜ UYGULAMALAR</string>
    <string name="running_app_not_found">Çalışan uygulama bulunamadı.</string>
    <string name="installed_apps_not_found">Yüklü uygulama bulunamadı.</string>
    <string name="gunluk_limit_belirleyin">Günlük limit belirleyin</string>
    <string name="uygulamayi_kaldir">Uygulamayı kaldır</string>
    <string name="remove_app">Kaldır</string>

</resources>