<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/gunluk_limit_belirleyin"
                    android:textAppearance="?textAppearanceSubtitle1" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_device_session"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_1"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:checked="true"
                        android:text="@string/half_hour" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_2"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/one_hour" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_3"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/two_hours" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_4"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:text="@string/four_hours" />
                </com.google.android.material.chip.ChipGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSaveSession"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/save"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDialogCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/cancel"
                        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                        android:textColor="@color/secondaryColor" />
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>