<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:id="@+id/login_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/loginScreenLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/mobicon_logo_desc"
                    app:srcCompat="@drawable/ic_logo" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/TextAppearance.MdcTypographyStyles.Headline4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/color_black" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/login_welcome_message"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login_facebook"
                    android:layout_width="310dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_rounded_corner_24"
                    android:gravity="center|start"
                    android:onClick="loginWithFacebook"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/facebook_login_btn_msg"
                    android:textColor="@color/color_white"
                    app:backgroundTint="@color/color_facebook"
                    app:icon="@drawable/ic_baseline_facebook_24" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login_google"
                    android:layout_width="310dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_rounded_corner_24"
                    android:gravity="center|start"
                    android:onClick="loginWithGoogle"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/google_login_btn_msg"
                    android:textColor="@color/color_white"
                    app:backgroundTint="@color/color_google"
                    app:icon="@drawable/ic_icon_google" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/login_baskasi_tarafindan_yönetilmek_icin_msg"
                    android:textColor="@color/color_black"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginAsGuest"
                    android:layout_width="310dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_rounded_corner_24"
                    android:gravity="center|start"
                    android:onClick="loginAsAnonymously"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:text="@string/login_login_as_guest_btn_str"
                    android:textColor="@color/color_white"
                    app:backgroundTint="@color/color_primary"
                    app:icon="@drawable/ic_outline_remove_red_eye_24" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>