<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".mvvm.view.fragment.DeviceManagementFragment">

    <data>

        <variable
            name="mobileDevice"
            type="com.kidmobi.mvvm.model.MobileDevice" />

        <variable
            name="managedDevicesViewModel"
            type="com.kidmobi.mvvm.viewmodel.ManagedDevicesViewModel" />

        <variable
            name="settingsViewModel"
            type="com.kidmobi.mvvm.viewmodel.SettingsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!--<Toolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:titleTextColor="@color/design_default_color_surface"
                app:title="@string/app_name" />-->

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name" />


        </com.google.android.material.appbar.AppBarLayout>

        <!-- Note: A RecyclerView can also be used -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ekran_parlakligi"
                    android:textAppearance="?attr/textAppearanceSubtitle1" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/screenBrightnessSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ekran_parlakligi"
                    android:stepSize="1"
                    android:value="@{mobileDevice.settings.brightnessLevel}"
                    android:valueFrom="0"
                    android:valueTo="255"
                    app:tickVisible="false" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ses_duzeyini_ayarla"
                    android:textAppearance="?attr/textAppearanceSubtitle1" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/soundVolumeSlider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/ses_duzeyini_ayarla"
                    android:stepSize="1"
                    android:value="@{mobileDevice.settings.soundLevel}"
                    android:valueFrom="0"
                    android:valueTo="15"
                    app:tickVisible="false" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center"
            ads:adSize="FULL_BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>